main: add cli argument parsing and support for bin and hex loaders; ui: add preliminary ui and hook up keyboard into it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Sebastian Jastrzebski <sebby@digitalstream.io>"]
 
 [dependencies]
+getopts = "*"
 gl = "0.6.0"
 sdl2 = "0.27.2"
