mem: add initial expansion port and cartridge support; implement proper memory map support;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Sebastian Jastrzebski <sebby@digitalstream.io>"]
 
 [dependencies]
+byteorder = "1.0.0"
 getopts = "*"
 gl = "0.6.0"
 sdl2 = "0.27.2"
