--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ authors = ["Sebastian Jastrzebski <sebby@digitalstream.io>"]
 byteorder = "1.0.0"
 getopts = "*"
 gl = "0.6.0"
+log = "*"
 sdl2 = "0.27.2"
 time = "*"
