--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,15 @@
 name = "zinc64"
 version = "0.1.0"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
-repository = "https://github.com/digitalstreamio/zinc64"
-categories = ["c64", "emulator"]
-keywords = ["c64", "commodore", "emulator"]
+license = "GPL-2.0+"
 readme = "README.md"
-description = "Commodore 64 rustified"
+keywords = ["c64", "commodore", "emulator"]
+repository = "https://github.com/digitalstreamio/zinc64"
+homepage = "https://github.com/digitalstreamio/zinc64"
+categories = ["c64", "emulator"]
+description = """
+Commodore 64 emulator toolkit with batteries included but swappable
+"""
 
 [dependencies]
 bit_field = "0.9"
