--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zinc64"
-version = "0.5.1"
+version = "0.5.2"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator toolkit with batteries included but swappable"
 license = "GPL-3.0+"
@@ -16,6 +16,8 @@ byteorder = "1.2"
 log = "0.3"
 resid-rs = "0.7"
 time = "0.1"
+
+[profile.release]
 
 [workspace]
 members = [
