--- a/zinc64-sdl/Cargo.toml
+++ b/zinc64-sdl/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.3"
 time = "0.1"
 zinc64 = { path = "..", version = "0.6.0-pre" }
 zinc64-debug = { path = "../zinc64-debug", version = "0.6.0-pre" }
+zinc64-loader = { path = "../zinc64-loader", version = "0.6.0-pre" }
 
 [dependencies.sdl2]
 version = "0.31"
