--- a/zinc64-loader/Cargo.toml
+++ b/zinc64-loader/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zinc64-loader"
-version = "0.6.0-pre"
+version = "0.6.0"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator loader support"
 license = "GPL-3.0+"
@@ -10,4 +10,4 @@ repository = "https://github.com/digitalstreamio/zinc64"
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-zinc64 = { path = "..", version = "0.6.0-pre" }
+zinc64 = { path = "..", version = "0.6.0" }
