--- a/zinc64-loader/Cargo.toml
+++ b/zinc64-loader/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "zinc64-loader"
-version = "0.6.0"
+version = "0.6.1-pre"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator loader support"
 license = "GPL-3.0+"
 repository = "https://github.com/digitalstreamio/zinc64"
+readme = "README.md"
+keywords = ["c64", "commodore", "emulator"]
+categories = ["emulators"]
 
 [dependencies]
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-zinc64 = { path = "..", version = "0.6.0" }
+zinc64 = { path = "..", version = "0.6.1-pre" }
