--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ exclude = [ "bin/*", "doc/*", "res/*" ]
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-resid-rs = "0.7"
+resid-rs = { path = "../resid-rs", version="0.8" }
 
 [profile.release]
 
