--- a/zinc64-sdl/Cargo.toml
+++ b/zinc64-sdl/Cargo.toml
@@ -2,6 +2,7 @@
 name = "zinc64-sdl"
 version = "0.7.0-pre"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
+edition = "2018"
 description = "Commodore 64 emulator app"
 license = "GPL-3.0+"
 repository = "https://github.com/digitalstreamio/zinc64"
