project: update copyright and prepare for release

--- a/zinc64-loader/Cargo.toml
+++ b/zinc64-loader/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zinc64-loader"
-version = "0.7.0-pre"
+version = "0.7.0"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 edition = "2018"
 description = "Commodore 64 emulator loader support"
@@ -14,4 +14,4 @@ categories = ["emulators"]
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-zinc64 = { path = "..", version = "0.7.0-pre" }
+zinc64 = { path = "..", version = "0.7.0" }
