--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "zinc64"
-version = "0.7.0-pre"
-authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
+version = "0.7.0"
 edition = "2018"
+authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator toolkit with batteries included but swappable"
 license = "GPL-3.0+"
 repository = "https://github.com/digitalstreamio/zinc64"
@@ -15,7 +15,7 @@ exclude = [ "bin/*", "doc/*", "res/*" ]
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-resid-rs = { git = "https://github.com/digitalstreamio/resid-rs" }
+resid-rs = "0.9"
 
 [profile.release]
 
