--- a/zinc64-sdl/Cargo.toml
+++ b/zinc64-sdl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zinc64-sdl"
-version = "0.7.0"
+version = "0.8.0"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 edition = "2018"
 description = "Commodore 64 emulator app"
@@ -11,14 +11,14 @@ keywords = ["c64", "commodore", "emulator"]
 categories = ["emulators"]
 
 [dependencies]
-bit_field = "0.9"
 byteorder = "1.2"
 getopts = "0.2"
 log = "0.3"
 time = "0.1"
-zinc64 = { path = "..", version = "0.7.0" }
-zinc64-debug = { path = "../zinc64-debug", version = "0.7.0" }
-zinc64-loader = { path = "../zinc64-loader", version = "0.7.0" }
+zinc64-core = { path = "../zinc64-core" }
+zinc64 = { path = ".." }
+zinc64-debug = { path = "../zinc64-debug" }
+zinc64-loader = { path = "../zinc64-loader" }
 
 [dependencies.sdl2]
 version = "0.31"
