--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zinc64"
-version = "0.7.0"
+version = "0.8.0"
 edition = "2018"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator toolkit with batteries included but swappable"
@@ -11,16 +11,22 @@ keywords = ["c64", "commodore", "emulator"]
 categories = ["emulators"]
 exclude = [ "bin/*", "doc/*", "res/*" ]
 
+[features]
+default = ["std"]
+std = []
+
 [dependencies]
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-resid-rs = "0.9"
+resid-rs = "1.0"
+zinc64-core = { path = "zinc64-core" }
 
 [profile.release]
 
 [workspace]
 members = [
+    "zinc64-core",
     "zinc64-debug",
     "zinc64-loader",
     "zinc64-sdl",
