--- a/zinc64-core/Cargo.toml
+++ b/zinc64-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zinc64-debug"
+name = "zinc64-core"
 version = "0.8.0"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 edition = "2018"
@@ -12,6 +12,7 @@ categories = ["emulators"]
 
 [dependencies]
 bit_field = "0.9"
-byteorder = "1.2"
-log = "0.3"
-zinc64 = { path = ".." }
+
+[features]
+default = ["std"]
+std = []
