--- a/zinc64-debug/Cargo.toml
+++ b/zinc64-debug/Cargo.toml
@@ -14,4 +14,4 @@ categories = ["emulators"]
 bit_field = "0.9"
 byteorder = "1.2"
 log = "0.3"
-zinc64 = { path = ".." }
+zinc64-emu = { path = "../zinc64-emu" }
