--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,3 @@
-[package]
-name = "zinc64"
-version = "0.8.0"
-authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
-edition = "2018"
-description = "Commodore 64 emulator app"
-license = "GPL-3.0+"
-repository = "https://github.com/digitalstreamio/zinc64"
-readme = "README.md"
-keywords = ["c64", "commodore", "emulator"]
-categories = ["emulators"]
-
-[dependencies]
-byteorder = "1.2"
-getopts = "0.2"
-log = "0.3"
-time = "0.1"
-zinc64-core = { path = "zinc64-core" }
-zinc64-emu = { path = "zinc64-emu" }
-zinc64-debug = { path = "zinc64-debug" }
-zinc64-loader = { path = "zinc64-loader" }
-
-[dependencies.sdl2]
-version = "0.31"
-default-features = false
-features = ["unsafe_textures"]
-
-[profile.release]
-
 [workspace]
 members = [
     "zinc64-core",
@@ -34,4 +5,17 @@ members = [
     "zinc64-debug",
     "zinc64-loader",
     "zinc64-raspi",
+    "zinc64"
 ]
+default-members = [
+    "zinc64-core",
+    "zinc64-emu",
+    "zinc64-debug",
+    "zinc64-loader",
+    "zinc64"
+]
+
+[profile.release]
+codegen-units = 1
+debug = true
+lto = true
