--- a/.cargo/config
+++ b/.cargo/config
@@ -1,6 +1,6 @@
 [target.aarch64-unknown-none]
 rustflags = [
-  "-C", "link-arg=-Tlink.ld",
+  "-C", "link-arg=-Trpi64.ld",
   "-C", "target-feature=-fp-armv8",
   "-C", "target-cpu=cortex-a53",
 ]
