--- a/zinc64-loader/Cargo.toml
+++ b/zinc64-loader/Cargo.toml
@@ -7,11 +7,10 @@ description = "Commodore 64 emulator loader support"
 license = "GPL-3.0+"
 repository = "https://github.com/digitalstreamio/zinc64"
 readme = "README.md"
-keywords = ["c64", "commodore", "emulator"]
+keywords = ["c64", "commodore", "emulator", "no_std"]
 categories = ["emulators"]
 
 [dependencies]
-byteorder = "1.2"
-log = "0.3"
-zinc64-emu = { path = "../zinc64-emu" }
-
+byteorder = { version = "1.2", default-features = false }
+log = { version = "0.3", default-features = false }
+zinc64-emu = { path = "../zinc64-emu", default-features = false  }
