--- a/zinc64-raspi/Cargo.toml
+++ b/zinc64-raspi/Cargo.toml
@@ -12,11 +12,12 @@ categories = ["emulators"]
 publish = false
 
 [dependencies]
-byteorder = { version = "1.2", default-features = false }
 cortex-a = "2.3.1"
 linked_list_allocator = "0.6.3"
 log = { version = "0.3", default-features = false }
-raspi3_boot = { path = "../raspi3_boot" }
 register = "0.3.2"
+zorio = "0.1.0"
+raspi3_boot = { path = "../raspi3_boot" }
 zinc64-core = { path = "../zinc64-core", default-features = false }
 zinc64-emu = { path = "../zinc64-emu", default-features = false }
+zinc64-loader = { path = "../zinc64-loader", default-features = false }
