raspi: refactor modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "zinc64-emu",
     "zinc64-debug",
     "zinc64-loader",
-    "zinc64-raspi",
+    "zinc64-rpi",
     "raspi3_boot"
 ]
 default-members = [
