--- a/zinc64/Cargo.toml
+++ b/zinc64/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["c64", "commodore", "emulator"]
 categories = ["emulators"]
 
 [dependencies]
+bit_field = "0.9"
 byteorder = "1.3"
 log = "0.3"
 structopt = "0.2"
