emu: land revised cartridge support and fixes for more games

--- a/logger.conf
+++ b/logger.conf
@@ -1,7 +1,8 @@
 app=error
 cpu::ins=trace
 cpu::int=trace
-mem::banks=error
+mem::banks=trace
+cart::banks=trace
 cia::reg=error
 sid::reg=error
 vic::reg=error
