--- a/zinc64-rpi/Cargo.toml
+++ b/zinc64-rpi/Cargo.toml
@@ -21,3 +21,9 @@ raspi3_boot = { path = "../raspi3_boot" }
 zinc64-core = { path = "../zinc64-core", default-features = false }
 zinc64-emu = { path = "../zinc64-emu", default-features = false }
 zinc64-loader = { path = "../zinc64-loader", default-features = false }
+
+[profile.release]
+codegen-units = 1
+debug = true
+lto = true
+opt-level = 3
