--- a/zinc64-core/Cargo.toml
+++ b/zinc64-core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Commodore 64 emulator debugger support"
 license = "GPL-3.0+"
 repository = "https://github.com/digitalstreamio/zinc64"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["c64", "commodore", "emulator", "no_std"]
 categories = ["emulators"]
 
