--- a/zinc64-emu/Cargo.toml
+++ b/zinc64-emu/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator toolkit with batteries included but swappable"
 license = "GPL-3.0+"
 repository = "https://github.com/digitalstreamio/zinc64"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["c64", "commodore", "emulator", "no_std"]
 categories = ["emulators"]
 exclude = [ "bin/*", "doc/*", "res/*" ]
@@ -19,4 +19,4 @@ std = []
 bit_field = "0.9"
 log = { version = "0.3", default-features = false }
 resid-rs = { version = "1.0" }
-zinc64-core = { path = "../zinc64-core" }
+zinc64-core = { path = "../zinc64-core", version = "0.8" }
