--- a/zinc64/Cargo.toml
+++ b/zinc64/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zinc64"
-version = "0.8.0"
+version = "0.9.0"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 edition = "2018"
 description = "Commodore 64 emulator app"
@@ -11,11 +11,12 @@ keywords = ["c64", "commodore", "emulator"]
 categories = ["emulators"]
 
 [dependencies]
-bit_field = "0.9"
+bit_field = "0.10"
 byteorder = "1.3"
+cgmath = "0.17"
+glow="0.4"
 log = "0.3"
-structopt = "0.2"
-time = "0.1"
+structopt = "0.3"
 zinc64-core = { path = "../zinc64-core", version = "0.8" }
 zinc64-emu = { path = "../zinc64-emu", version = "0.8" }
 zinc64-debug = { path = "../zinc64-debug", version = "0.8" }
