--- a/zinc64/Cargo.toml
+++ b/zinc64/Cargo.toml
@@ -17,6 +17,7 @@ byteorder = "1.3"
 cgmath = "0.17"
 cpal = "0.11"
 glow="0.4"
+glutin = "0.23"
 log = "0.3"
 structopt = "0.3"
 zinc64-core = { path = "../zinc64-core", version = "0.8" }
