project: update github repo locations
Signed-off-by: Sebastian Jastrzebski <sebby2k@gmail.com>

--- a/zinc64-loader/Cargo.toml
+++ b/zinc64-loader/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 edition = "2018"
 description = "Commodore 64 emulator loader support"
 license = "GPL-3.0+"
-repository = "https://github.com/digitalstreamio/zinc64"
+repository = "https://github.com/binaryfields/zinc64"
 readme = "../README.md"
 keywords = ["c64", "commodore", "emulator", "no_std"]
 categories = ["emulators"]
