--- a/zinc64-emu/Cargo.toml
+++ b/zinc64-emu/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
 description = "Commodore 64 emulator toolkit with batteries included but swappable"
 license = "GPL-3.0+"
-repository = "https://github.com/digitalstreamio/zinc64"
+repository = "https://github.com/binaryfields/zinc64"
 readme = "../README.md"
 keywords = ["c64", "commodore", "emulator", "no_std"]
 categories = ["emulators"]
